# mummer

./: .gitignore  Cargo.toml
mime/: Cargo.toml  README.md  src
mime-macro/: Cargo.toml
mime-parse/: Cargo.toml
mummer/: Cargo.toml
mummer/examples/: rev_map.rs
mummer/src/: lib.rs
