[package]

name = "mime-macro"
version = "0.0.0"
description = "mime procedural macros"
repository = "https://github.com/hyperium/mime"
license = "MIT"
edition = "2021"

[lib]
name = "mime_macro"
proc-macro = true

[dependencies]
mime-parse = { path = "../mime-parse" }
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
quote = "0.6"
syn = "0.15"
